--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "moment": "^2.24.0",
     "node-fetch": "^2.6.0",
     "sqlite-async": "^1.0.12"
+  },
+  "scripts": {
+    "start": "node index"
   }
 }
