--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "cors": "^2.8.5",
     "csv-parse": "^4.9.0",
     "csv-writer": "^1.6.0",
+    "dompurify": "^2.0.10",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "marked": "^1.0.0",
     "moment": "^2.24.0",
     "node-fetch": "^2.6.0",
     "sqlite-async": "^1.0.12"
