--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "scripts": {
     "start": "node index",
-    "debug": "node --inspect-brk index"
+    "debug": "node --inspect-brk index",
+    "checkForNew": "node server/checkForNewVids",
+    "makeHtml": "node server/makeHtml"
   }
 }
