adding in init stats

--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
     "debug": "node --inspect-brk index",
     "checkForNew": "node --inspect-brk server/checkForNewVids",
     "makeHtml": "node server/makeHtml",
-    "test": "node --inspect-brk server/run"
+    "test": "node server/run"
   }
 }
