add vids route created ;

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "start": "node index",
     "debug": "node --inspect-brk index",
-    "checkForNew": "node --inspect-brk server/checkForNewVids",
+    "checkForNew": "node server/checkForNewVids",
     "makeHtml": "node server/makeHtml",
     "addNew": "node server/addNewVideosFromUrlsFile",
     "test": "node server/run"
