--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "dompurify": "^2.0.10",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "json2html": "^0.0.8",
     "marked": "^1.0.0",
     "moment": "^2.24.0",
     "node-fetch": "^2.6.0",
+    "nodemailer": "^6.4.6",
     "sqlite-async": "^1.0.12"
   },
   "scripts": {
@@ -24,6 +26,6 @@
     "checkForNew": "node server/checkForNewVids",
     "makeHtml": "node server/makeHtml",
     "addNew": "node server/addNewVideosFromUrlsFile",
-    "test": "node server/run"
+    "test": "node --inspect-brk server/run"
   }
 }
