--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.24.0",
     "node-fetch": "^2.6.0",
     "nodemailer": "^6.4.6",
+    "rss-parser": "^3.8.0",
     "sqlite-async": "^1.0.12"
   },
   "scripts": {
