--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,10 +6,11 @@
     "configurations": [
         {
             "name": "Attach to Chrome",
-            "port": 3000,
+            "port": 9229,
             "request": "attach",
             "type": "pwa-chrome",
-            "webRoot": "${workspaceFolder}"
+            "webRoot": "${workspaceFolder}/server",
+            "url": "http://localhost:3000"
         },
         
         {
