audience type bug fix

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "scripts": {
     "start": "node index",
-    "debug": "node --inspect-brk index",
+    "debug": "node --inspect index",
     "makeHtml": "node server/makeHtml",
     "test": "node server/run"
   }
